--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="sing_in_label">Start sending messages</string>
     <string name="title_home">Home</string>
     <string name="title_people">Personas</string>
+    <string name="title_group">Grupos</string>
     <string name="title_my_account">Mi Cuenta</string>
     <string name="button_sing_in">Continue &amp; Sing In</string>
     <string name="send_message_hint">Write your message</string>
